--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,3 +1,13 @@
-body {
-  padding: 0px 40px;
-  border: 1px; }
+.boards {
+  margin: 20px 0;
+  overflow: hidden; }
+
+.board {
+  border: 5px solid #ccc;
+  float: left;
+  font: 700 24px HelveticaNeue, Helvetica, Arial;
+  margin-right: 20px;
+  padding: 20px; }
+
+.board.selected {
+  border-color: #3BA8AA; }
