--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -35,3 +35,31 @@ body{
 		display: none;
 	}
 }
+
+.hoverinfo {
+	@media (max-width: 650px){
+		right: 0 !important;
+		left: 0 !important;
+	}
+	background: rgba(0,0,0,0.8) !important;
+	padding: 20px 20px 10px !important;
+	max-width: 400px;
+	border: 1px solid #222 !important;
+	color: white;
+	h4{
+		margin: 0 0 10px;
+		font-size: 1.3em;
+	}
+}
+
+@media (max-width: 650px){
+	.datamaps-hoverover {
+		position: relative !important;
+		left: 0px !important;
+		right: 0px !important;
+		max-width: 100% !important;
+	}
+	.labels {
+		display: none;
+	}
+}
